--- a/backend/rest_api/src/infrastructure/adapters/providers/mailjet/templates/welcome.html
+++ b/backend/rest_api/src/infrastructure/adapters/providers/mailjet/templates/welcome.html
@@ -2,40 +2,50 @@
 <html lang="uk">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CryptoWallet welcome message</title>
+    <style>
+      header,
+      section,
+      footer {
+        font-family: sans-serif;
+        width: 600px;
+        box-sizing: border-box;
+        padding: 10px 20px;
+      }
+
+      section {
+        background: white;
+        color: #9b5de0;
+        border-left: 1px solid lightgray;
+        border-right: 1px solid lightgray;
+      }
+
+      header,
+      footer {
+        text-align: center;
+        background-color: #9b5de0;
+        color: white;
+        border: 1px solid lightgray;
+      }
+
+      header {
+        font-size: 24px;
+        font-weight: bold;
+      }
+
+      footer {
+        font-size: 12px;
+      }
+    </style>
   </head>
-  <body style="margin:0; padding:0; font-family: 'Varela Round', sans-serif; background-color:#ffffff;">
-    <table width="100%" cellpadding="0" cellspacing="0" border="0">
-      <tr>
-        <td align="center" style="padding: 20px 0;">
-          <!-- Контейнер листа з фіолетовим фоном і білою рамкою -->
-          <table width="600" cellpadding="0" cellspacing="0" border="0" style="border: 1px solid #ffffff; background-color:#9b5de0; border-collapse: collapse;">
-
-            <!-- Header -->
-            <tr>
-              <td style="text-align:center; font-size:24px; font-weight:bold; padding:20px; color:#ffffff;">
-                CryptoWallet
-              </td>
-            </tr>
-
-            <!-- Body -->
-            <tr>
-              <td style="padding:20px; font-size:16px; line-height:1.5; color:#ffffff;">
-                <p>Welcome, {{username}}👋.</p>
-                <p>You have received this email because you successfully registered on CryptoWallet.</p>
-              </td>
-            </tr>
-
-            <!-- Footer -->
-            <tr>
-              <td style="text-align:center; font-size:12px; padding:10px; color:#ffffff;">
-                © 2025 CryptoWallet. All rights reserved.
-              </td>
-            </tr>
-
-          </table>
-        </td>
-      </tr>
-    </table>
-  </body>
+  <header>CryptoWallet</header>
+  <section>
+    <p>
+      Welcome, {{username}}👋. You have received this letter, because you had
+      successfully registered on CryptoWallet.
+    </p>
+  </section>
+  <footer>© 2025 CryptoWallet. All rights reserved.</footer>
 </html>
